tests/NormalTests/paczka1/fuzzy1/31653447.err
Error in line 3: g0hSouuhS S517 75,0
Error in line 7: kUpS4fOc S155 83,4
Error in line 14: g0hSouuhS S62 97,0
Error in line 23: kUpS4fOc S62 41,5
Error in line 16: c7jqKQThiZf S517 22,4
Error in line 17: cn3hI S155 16,6
Error in line 29: iUc S155 12,7
Error in line 26: s0tTxt S245 70,7
Error in line 24: kUpS4fOc S155 30,3
